<resources>
    <string name="app_name">eRifornimento</string>
    <string name="splashString">eRifornimento</string>
    <string name="imposta_server">Imposta server</string>
    <string name="nuova_fattura">Nuova fattura</string>
    <string name="fatture">Nuova fattura</string>
    <string name="automobile">Dati automobile</string>
    <string name="benzina">Benzina</string>
    <string name="euro">0,00 Euro</string>
    <string name="diesel">Diesel</string>
    <string name="gpl">Gpl</string>
    <string name="metano">Metano</string>
    <string name="targa">Targa automobile</string>
    <string name="notarga">Nessuna targa impostata</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="azienda">Dati azienda</string>
    <string name="retrievedatiazienda">Recupera i dati aziendali</string>
    <string name="invia_fattua_al_server">Invia fattua al server</string>
    <string name="ragione_sociale">Ragione sociale</string>
    <string name="xxxxxxxxx">XXXXXXXXX</string>
    <string name="partita_iva">Partita IVA</string>
    <string name="cf">Codice fiscale</string>
    <string name="nazione">Nazionalità</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="pec">Pec</string>
    <string name="code">Codice</string>
    <string name="qr">Data QR</string>
    <string name="modifica">Modifica</string>
    <string name="annulla">Annulla</string>
    <string name="cap">Cap sede legale</string>
    <string name="comune">Comune sede legale</string>
    <string name="provicia">Provincia sede legale</string>
    <string name="naziones">Nazione sede legale</string>
    <string name="ok">Ok</string>
    <string name="httpserver">http://192.168.1.15:8080</string>
    <string name="emptyragione">La ragione sociale non può essere nulla</string>
    <string name="emptypartitaiva">La partita iva non puo essere nulla</string>
    <string name="invalidpartitaiva">La partita iva deve essere composta di 11 numeri</string>
    <string name="invalidmail">La mail non è corretta</string>
    <string name="invalidmailorCode">O la mail o il codice devono essere presenti e validi</string>
    <string name="emptycap">Il CAP non può essere nullo</string>
    <string name="emptyindirizzo">L\'indirizzo non può essere nullo</string>
    <string name="emptycomune">Il comune non può essere nullo</string>
    <string name="totale">Totale</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Username richiesto</string>
    <string name="error_invalid_password">Password richiesta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>

</resources>
