<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ragione_sociale" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtRagSoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ragione_sociale"
                android:textAllCaps="true"
                android:maxLines="1"
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partita_iva" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtiva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/partita_iva"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cf" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtcf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cf"
                android:textAllCaps="true"
                android:maxLines="1"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nazione" />

           <Spinner
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/spnaz"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indirizzo" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indirizzo"
                android:textAllCaps="true"
                android:maxLines="1"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cap" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtcap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cap"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comune"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comune"
                android:textAllCaps="true"
                android:maxLines="1"
                android:inputType="text"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/provicia" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spprov"></Spinner>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naziones" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnazs"></Spinner>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pec" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtpec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pec"
                android:inputType="textEmailAddress"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code"
                android:textAllCaps="true"
                android:maxLines="1"
                android:inputType="text"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            >

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnOk"
                android:text="@string/ok"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:text="@string/annulla"/>

        </LinearLayout>


    </LinearLayout>







</ScrollView>