<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FatturaActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/supercontainer"
        >

        <!--<include-->
            <!--android:id="@+id/toolbar"-->
            <!--layout="@layout/toolbar" />-->

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--intestazione gruppo di valori per l'auto-->
            <!--<android.support.v7.widget.AppCompatTextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="20dp"-->
                <!--android:text="@string/automobile"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="18sp" />-->
            <!--targa-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:id="@+id/targa">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/targa"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/targa_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notarga"
                    android:textSize="20sp" />

            </LinearLayout>


            <!--benzina diesel-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_benzina"
                    android:id="@+id/benzina"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_diesel"
                    android:id="@+id/diesel"/>



            </LinearLayout>


            <!--gpl metano-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_gpl"
                    android:id="@+id/gpl"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_metano"
                    android:id="@+id/metano"/>



            </LinearLayout>


            <!--importo benzina-->
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:id="@+id/totale">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totale"
                    android:textColor="#000"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/totale_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"

                    android:textSize="32sp" />

            </LinearLayout>


            <!--importo benzina-->
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:padding="20dp"-->
                <!--android:id="@+id/benzina">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/benzina"-->
                    <!--android:textSize="18sp"-->
                    <!--android:textColor="#000"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/euro"-->
                    <!--android:id="@+id/benzina_value"-->

                    <!--/>-->

            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:padding="20dp"-->
                <!--android:id="@+id/diesel">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/diesel"-->
                    <!--android:textSize="18sp"-->
                    <!--android:textColor="#000"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/euro"-->
                    <!--android:id="@+id/diesel_value"/>-->

            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:padding="20dp"-->
                <!--android:id="@+id/gpl">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/gpl"-->
                    <!--android:textSize="18sp"-->
                    <!--android:textColor="#000"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/euro"-->
                    <!--android:id="@+id/gpl_value"/>-->

            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:padding="20dp"-->
                <!--android:id="@+id/metano"-->
                <!--&gt;-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/metano"-->
                    <!--android:textSize="18sp"-->
                    <!--android:textColor="#000"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/euro"-->
                    <!--android:id="@+id/metano_value"/>-->

            <!--</LinearLayout>-->
            <!--separatore-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_place">

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/invia_fattua_al_server"
                android:textSize="24sp"
                app:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_contanti"
                    android:id="@+id/pagacontanti"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_card"
                    android:id="@+id/pagacard"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            >

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:text="Sto inviando la fattura..."
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>









</ScrollView>